# trabalho-mlg-pib-municipios

./: .gitignore  README.md  main.py  pyproject.toml
config/: USAGE.md  __init__.py  settings.py
notebooks/: 01_exploracao_e_limpeza.ipynb  02_analise_territorial.ipynb  03_modelagem_regressao.ipynb
